--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-h1 {
+@import url('https://fonts.googleapis.com/css2?family=Moo+Lah+Lah&display=swap');
+
+h2 {
   font: Arial;
   color: blue;
+}
+
+
+.moo-lah-lah-regular {
+  font-family: "Moo Lah Lah", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
